<resources>
    <string name="app_name">Boardeo</string>

    <!-- Home activity -->
    <string name="title_activity_home">Boardeo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_my_boards">My boards</string>
    <string name="action_board_list">Browse boards</string>
    <string name="action_settings">Settings</string>

    <!-- Board list activity -->
    <string name="title_activity_board_list">My boards</string>

    <!-- New board activity -->
    <string name="title_activity_new_board">Create a board</string>

    <!-- New post activity -->
    <string name="title_activity_new_post">Create new post</string>

    <!-- Board details activity -->
    <string name="title_activity_board_details">Board details</string>

    <!-- Settings activity -->
    <string name="title_activity_settings">Settings</string>

    <!-- Sign in chooser activity -->
    <string name="title_activity_sign_in_chooser">Sign in</string>
    <string name="signin_chooser_label_emailpassword">Sign in with email/password</string>
    <string name="signin_chooser_label_google">Sign in with Google</string>

    <!-- Email/password sign in activity -->
    <string name="title_activity_emailpassword_sign_in">Sign in with email</string>
    <string name="emailpassword_user_status">Signed in email user: %1$s (verified: %2$b)</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="dialog_title_sign_out">Sign out</string>
    <string name="dialog_content_sign_out">Do you really want to sign out?</string>

    <!-- Email/password create account activity -->
    <string name="title_activity_create_account">Create an account</string>
    <string name="hint_username">Username</string>
    <string name="hint_password_again">Password (again)</string>
    <string name="dialog_title_email_account_created">Account successfully created</string>
    <string name="dialog_content_email_account_created">Don\'t forget to check your emails to activate your account</string>

    <!-- Google sign in activity -->
    <string name="title_activity_google_sign_in">Sign in with Google</string>
    <string name="google_user_status">Signed in Google user: %s</string>

    <!-- Sign in activities -->
    <string name="create_account">Create account</string>
    <string name="loading">Loading…</string>
    <string name="sign_in">Sign in</string>
    <string name="signed_in">Signed in</string>
    <string name="sign_out">Sign out</string>
    <string name="signed_out">Signed out</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="verify_email">Verify email</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_or_sign_in_with_google">Or sign in with Google</string>
    <string name="login_no_account_yet_create_one">No account yet? Create one!</string>
    <string name="login_forgot_your_password">Forgot your password?</string>
    <string name="allow_location">Allow location</string>
    <string name="activate_location">Activate location</string>
    <string name="board_status">Board status</string>
    <string name="board_name_field">Board name</string>
    <string name="short_description_field">Short description</string>
    <string name="full_description_field">Full description</string>
    <string name="owner_uid_field">Owner UID</string>
    <string name="coordinates_field">Coordinates</string>
    <string name="edit_field">Edit</string>
    <string name="public_board_field">Public board</string>
    <string name="post_title_field">Post title</string>
    <string name="comment_content_field">Comment content</string>
    <string name="comment_date_field">Comment date</string>
    <string name="comment_author_field">Comment author</string>
    <string name="post_content_field">Post content</string>
    <string name="post_date_field">Post date</string>
    <string name="post_author_field">Post author</string>
    <string name="title_post_activity">Post</string>
    <string name="delete_board_button_text">Delete</string>
    <string name="by_author">By %1$s</string>
    <string name="action_home_maps">Nearby boards</string>
    <string name="board_edit_menu_item_label">Edit</string>
    <string name="board_delete_menu_item_label">Delete</string>
    <string name="post_edit_menu_item_label">Edit</string>
    <string name="post_delete_menu_item_label">Delete</string>
    <string name="action_sort_boards">Sort nearby boards</string>
    <string name="action_sort_by_distance">By distance</string>
    <string name="action_sort_by_tags">By tags</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="select_distance_filter">Select the filter distance</string>
    <string name="select_tags_filter">Select the tags to filter</string>
    <string name="comment_edit_label">Edit</string>
    <string name="comment_delete_label">Delete</string>
    <string name="coordinates">Coordinates : {%1$f ; %2$f}</string>
    <string name="owner">Owner : %1$s</string>
    <string name="no_notification">No notification</string>
    <string name="notification">New notification</string>
    <string name="board_color">Board color</string>
    <string name="edit_board">Edit board</string>
    <string name="edit_post">Edit post</string>
    <string name="create_board">Create board</string>
    <string name="create_post">Create post</string>

</resources>
