<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group_board">
        <item
            android:id="@+id/nav_my_boards"
            android:icon="@drawable/ic_my_boards"
            android:title="@string/action_my_boards" />
        <item
            android:id="@+id/nav_boards"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/action_board_list" />
    </group>

    <group android:id="@+id/group_settings">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit"
            android:title="@string/sign_out" />
    </group>



</menu>
