<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/tagsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_tags_filter"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tagsText"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/apply" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tagsText"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_toLeftOf="@+id/applyButton"
        android:layout_toStartOf="@+id/applyButton"
        android:text="@string/cancel" />

</RelativeLayout>