<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/distanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_distance_filter"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/distanceContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distanceText"
        android:layout_marginTop="@dimen/fab_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/distanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <SeekBar
            android:id="@+id/distanceBar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:max="250"
            android:progress="10" />

    </LinearLayout>

    <Button
        android:id="@+id/applyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distanceContainer"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/apply" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distanceContainer"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_toLeftOf="@+id/applyButton"
        android:layout_toStartOf="@+id/applyButton"
        android:text="@string/cancel" />

</RelativeLayout>