<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.fouss.boardeo.BoardDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expanded="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            style="@style/Widget.Shrine.CollapsingToolbar">

            <LinearLayout
                style="@style/Widget.Shrine.CollapsingToolbarContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/boardName"
                        style="@style/Drawy.BoardName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_locked_white"
                        android:drawablePadding="@dimen/small_spacing"
                        android:drawableStart="@drawable/ic_locked_white"
                        android:text="@string/board_name_field" />

                    <CheckBox
                        android:id="@+id/board_detail_subscription_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:button="@drawable/subscription_checkbox"
                        android:checked="false"
                        android:enabled="false" />

                </LinearLayout>

                <TextView
                    android:id="@+id/boardOwner"
                    style="@style/Drawy.BoardAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_spacing"
                    android:text="@string/owner_uid_field" />

                <TextView
                    android:id="@+id/boardCoordinates"
                    style="@style/Drawy.BoardCoordinates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_spacing"
                    android:text="@string/coordinates_field" />

                <TextView
                    android:id="@+id/boardShortDescription"
                    style="@style/Drawy.BoardShortDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:text="@string/short_description_field" />

                <TextView
                    android:id="@+id/boardFullDescription"
                    style="@style/Drawy.BoardFullDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:text="@string/full_description_field" />

            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

    <include layout="@layout/activity_board_details_content" />

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addPostButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/secondaryColorDark"
        android:focusable="true" />

</android.support.design.widget.CoordinatorLayout>
