<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.fouss.boardeo.BoardDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expanded="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            style="@style/Widget.Shrine.CollapsingToolbar">

            <LinearLayout
                style="@style/Widget.Shrine.CollapsingToolbarContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/fab_margin">

                <TextView
                    android:id="@+id/post_title_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Drawy.PostTitle"
                    android:text="@string/post_title_field" />

                <TextView
                    android:id="@+id/post_author_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_spacing"
                    style="@style/Drawy.PostAuthor"
                    android:text="@string/post_author_field" />

                <TextView
                    android:id="@+id/post_date_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_spacing"
                    style="@style/Drawy.PostDate"
                    android:text="@string/post_date_field" />

                <TextView
                    android:id="@+id/post_content_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fab_margin"
                    style="@style/Drawy.PostContent"
                    android:text="@string/post_content_field" />

            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <include layout="@layout/activity_post_content" />
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_spacing"
        android:background="@color/grey_900"
        android:layout_gravity="bottom">

        <EditText
            android:id="@+id/comment_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/comment_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_gravity="bottom"
            android:background="@drawable/ic_send" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
